testcases/hereiam/positive/login_TC10.sah
_setValue(_textbox("userId"), "ritu@gmail.com");
_setValue(_password("password"), "hello");
_click(_div("LOGIN"));
